--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -100,6 +100,7 @@
     <Compile Include="BLL\HQSY\HQSY_HQGSBLL.cs" />
     <Compile Include="BLL\HQSY\HQSY_HQYPBLL.cs" />
     <Compile Include="BLL\HQSY\HQSY_HSLFBLL.cs" />
+    <Compile Include="BLL\HQSY\HQSY_HSSYBLL.cs" />
     <Compile Include="BLL\HQSY\HQSY_HYJDBLL.cs" />
     <Compile Include="BLL\HQSY\HQSY_SYBLL.cs" />
     <Compile Include="BLL\HQSY\HQSY_ZBSSBLL.cs" />
