--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -216,6 +216,7 @@
     <Compile Include="SWFW\ISWFW_PHZPBLL.cs" />
     <Compile Include="SWFW\ISWFW_SBZLBLL.cs" />
     <Compile Include="SWFW\ISWFW_SJCHBLL.cs" />
+    <Compile Include="SWFW\ISWFW_SYSXBLL.cs" />
     <Compile Include="SWFW\ISWFW_TZDBBLL.cs" />
     <Compile Include="SWFW\ISWFW_WLBXWHBLL.cs" />
     <Compile Include="SWFW\ISWFW_WZJSTGBLL.cs" />
