--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -206,6 +206,7 @@
     <Compile Include="BLL\SWFW\SWFW_JZWXBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_KDBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_LPDZBLL.cs" />
+    <Compile Include="BLL\SWFW\SWFW_LYQDBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_PHZPBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_SBZLBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_SJCHBLL.cs" />
