--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -373,6 +373,7 @@
     <Content Include="Areas\Business\Css\LYJD\LYJD_JP.css" />
     <Content Include="Areas\Business\Css\LYJD\LYJD_LXS.css" />
     <Content Include="Areas\Business\Css\LYJD\LYJD_ZBY.css" />
+    <Content Include="Areas\Business\Css\NLMFY\NLMFY_YLHH.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_JXJG.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_KQ.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_TS.css" />
@@ -708,6 +709,8 @@
     <Content Include="Areas\Business\Scripts\Business\LYJD\LYJD_LXSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\LYJD\LYJD_ZBY.js" />
     <Content Include="Areas\Business\Scripts\Business\LYJD\LYJD_ZBYYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\NLMFY\NLMFY_YLHH.js" />
+    <Content Include="Areas\Business\Scripts\Business\NLMFY\NLMFY_YLHHYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PageJson.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_AFSB.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_AFSBYZ.js" />
@@ -1232,6 +1235,9 @@
     <Content Include="Config\SpringConfig\BLLHQSY.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Config\SpringConfig\BLLNLMFY.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Config\SpringConfig\BLLZXJC.xml">
       <SubType>Designer</SubType>
     </Content>
@@ -1264,6 +1270,7 @@
     <Content Include="Config\SpringConfig\BLLPWKQ.xml" />
     <Content Include="Config\SpringConfig\BLLGY.xml" />
     <Content Include="Config\SpringConfig\ControllersHQSY.xml" />
+    <Content Include="Config\SpringConfig\ControllersNLMFY.xml" />
     <Content Include="Config\SpringConfig\ControllersZXJC.xml" />
     <Content Include="Config\SpringConfig\ControllersPFCG.xml" />
     <Content Include="Config\SpringConfig\ControllersQZZP.xml" />
@@ -1402,6 +1409,7 @@
     <Compile Include="Areas\Business\Controllers\LYJD\LYJD_JPController.cs" />
     <Compile Include="Areas\Business\Controllers\LYJD\LYJD_LXSController.cs" />
     <Compile Include="Areas\Business\Controllers\LYJD\LYJD_ZBYController.cs" />
+    <Compile Include="Areas\Business\Controllers\NLMFY\NLMFY_YLHHController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_AFSBController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_BZController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_DGDLController.cs" />
@@ -1813,6 +1821,7 @@
     <Content Include="Areas\Business\Views\HQSY_HSSY\HQSY_HSSY.cshtml" />
     <Content Include="Areas\Business\Views\SWFW_SYSX\SWFW_SYSX.cshtml" />
     <Content Include="Areas\Business\Views\SWFW_LYQD\SWFW_LYQD.cshtml" />
+    <Content Include="Areas\Business\Views\NLMFY_YLHH\NLMFY_YLHH.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
