--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Maps\LR\LR_WSJBXX_Map.cs" />
     <Compile Include="Maps\LR\LR_YJJBXX_Map.cs" />
     <Compile Include="Maps\LYJD\LYJD_ZBYJBXX_Map.cs" />
+    <Compile Include="Maps\NLMFY\NLMFY_NZWJBXX_Map.cs" />
     <Compile Include="Maps\NLMFY\NLMFY_YLHHJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_AFSBJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_BZJBXX_Map.cs" />
@@ -396,6 +397,7 @@
     <Compile Include="Models\LYJD\LYJD_JPJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_LXSJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_ZBYJBXX.cs" />
+    <Compile Include="Models\NLMFY\NLMFY_NZWJBXX.cs" />
     <Compile Include="Models\NLMFY\NLMFY_YLHHJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_AFSBJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_BZJBXX.cs" />
