--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -141,8 +141,10 @@
     <Compile Include="BLL\LYJD\LYJD_JPBLL.cs" />
     <Compile Include="BLL\LYJD\LYJD_LXSBLL.cs" />
     <Compile Include="BLL\LYJD\LYJD_ZBYBLL.cs" />
+    <Compile Include="BLL\NLMFY\NLMFY_CQYZBLL.cs" />
     <Compile Include="BLL\NLMFY\NLMFY_DZWZMBLL.cs" />
     <Compile Include="BLL\NLMFY\NLMFY_NZWBLL.cs" />
+    <Compile Include="BLL\NLMFY\NLMFY_SCBLL.cs" />
     <Compile Include="BLL\NLMFY\NLMFY_YLHHBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_AFSBBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_BZBLL.cs" />
