--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Maps\NLMFY\NLMFY_CQYZJBXX_Map.cs" />
     <Compile Include="Maps\NLMFY\NLMFY_DZWZMJBXX_Map.cs" />
     <Compile Include="Maps\NLMFY\NLMFY_FLNYJBXX_Map.cs" />
+    <Compile Include="Maps\NLMFY\NLMFY_NCPJGJBXX_Map.cs" />
     <Compile Include="Maps\NLMFY\NLMFY_NJJSBJBXX_Map.cs" />
     <Compile Include="Maps\NLMFY\NLMFY_NZWJBXX_Map.cs" />
     <Compile Include="Maps\NLMFY\NLMFY_SCJBXX_Map.cs" />
@@ -406,6 +407,7 @@
     <Compile Include="Models\NLMFY\NLMFY_CQYZJBXX.cs" />
     <Compile Include="Models\NLMFY\NLMFY_DZWZMJBXX.cs" />
     <Compile Include="Models\NLMFY\NLMFY_FLNYJBXX.cs" />
+    <Compile Include="Models\NLMFY\NLMFY_NCPJGJBXX.cs" />
     <Compile Include="Models\NLMFY\NLMFY_NJJSBJBXX.cs" />
     <Compile Include="Models\NLMFY\NLMFY_NZWJBXX.cs" />
     <Compile Include="Models\NLMFY\NLMFY_SCJBXX.cs" />
