--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -227,6 +227,7 @@
     <Compile Include="BLL\SWFW\SWFW_ZKBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_ZLBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_ZXFWBLL.cs" />
+    <Compile Include="BLL\SYBLL.cs" />
     <Compile Include="BLL\WDFBBLL.cs" />
     <Compile Include="BLL\WDSCBLL.cs" />
     <Compile Include="BLL\WDXJBLL.cs" />
