--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -222,6 +222,15 @@
     <Content Include="Areas\Business\Css\images\arrow_down_big.png" />
     <Content Include="Areas\Business\Css\images\arrow_up.png" />
     <Content Include="Areas\Business\Css\images\bddt_search.png" />
+    <Content Include="Areas\Business\Css\images\bddt_search_hover.png" />
+    <Content Include="Areas\Business\Css\images\body_top_cw.png" />
+    <Content Include="Areas\Business\Css\images\body_top_esc.png" />
+    <Content Include="Areas\Business\Css\images\body_top_essc.png" />
+    <Content Include="Areas\Business\Css\images\body_top_fc.png" />
+    <Content Include="Areas\Business\Css\images\body_top_jypx.png" />
+    <Content Include="Areas\Business\Css\images\body_top_shfw.png" />
+    <Content Include="Areas\Business\Css\images\body_top_swfw.png" />
+    <Content Include="Areas\Business\Css\images\body_top_zp.png" />
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_fhdb_hz.png" />
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_lxkf_mygrxx.png" />
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_dhmycx_cx.png" />
@@ -257,6 +266,8 @@
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_fhdb.png" />
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_wzyj_sctp.png" />
     <Content Include="Areas\Business\Css\images\cellphone.png" />
+    <Content Include="Areas\Business\Css\images\check_blue.png" />
+    <Content Include="Areas\Business\Css\images\check_gray.png" />
     <Content Include="Areas\Business\Css\images\clip.png" />
     <Content Include="Areas\Business\Css\images\close.png" />
     <Content Include="Areas\Business\Css\images\contract.png" />
@@ -267,7 +278,10 @@
     <Content Include="Areas\Business\Css\images\edit.png" />
     <Content Include="Areas\Business\Css\images\edit_select.png" />
     <Content Include="Areas\Business\Css\images\expand.png" />
+    <Content Include="Areas\Business\Css\images\expand_blue.png" />
     <Content Include="Areas\Business\Css\images\grsfrz.png" />
+    <Content Include="Areas\Business\Css\images\head_nav_down.png" />
+    <Content Include="Areas\Business\Css\images\head_nav_up.png" />
     <Content Include="Areas\Business\Css\images\icon.png" />
     <Content Include="Areas\Business\Css\images\info.png" />
     <Content Include="Areas\Business\Css\images\logo.png" />
@@ -295,6 +309,29 @@
     <Content Include="Areas\Business\Css\images\system_photo2.jpg" />
     <Content Include="Areas\Business\Css\images\system_photo3.jpg" />
     <Content Include="Areas\Business\Css\images\system_photo4.jpg" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_bjgl.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_cjrj.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_cszs.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_cyzs.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_czlcx.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_fcjy.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_gmgl.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_gzjsq.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_hqgl.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_jhlz.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_jjz.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_jsz.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_sbyl.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_sfhj.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_shqm.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_syqz.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_wzcx.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_xcaq.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_xsz.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_ycbk.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_yygh.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_zxjsq.png" />
+    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_zxzs.png" />
     <Content Include="Areas\Business\Css\images\three-blue.png" />
     <Content Include="Areas\Business\Css\images\three-gray.png" />
     <Content Include="Areas\Business\Css\images\two-blue.png" />
